﻿Version 1.0.37
- Added a note to ReadMe.html to review the ASP.NET MVC Boilerplate project template.

Version 1.0.36
- Fixed the RedirectToHttpsAttribute class not being recognized in the project, thanks to @dls314159 for highlighting this issue.
- Added two more IgnoreRoute statements to support Elmah, copied from Elmah.MVC (This should be part of Elmah.MVC already, have submitted a pull request to Elmah.MVC. If they accept it, we can remove this code altogether).
- Added SitemapPingerService.cs and ISitemapPingerService.cs which sends the URL for the sitemap.xml file to Google, Microsoft and Yahoo.
- Registered the ISitemapPingerService with Autofac in Startup.Container.cs.
- Added a note in ReadMe.html to call the SitemapPingerService's PingSearchEngines method when your sitemap changes.

Version 1.0.35
- Atom feed now uses absolute URL's instead of the BaseUri. This is because Firefox has a bug and cannot handle relative URL's!!! Updated FeedService.cs.
- Moved some code around in FeedService.cs to make it easier to read. Uncommented the media enclosure link.
- Added self URL link to Atom feed in FeedService.cs.
- Added Yahoo Media Atom/RSS extensions to SyndicationFeedExtensions.cs.
- Added Yahoo Media thumbnails to Atom feed entries in FeedService.cs.
- Added a few content types to ContentType.cs and added some comments.

Version 1.0.34
- Added a AbsoluteContent extension method to UrlHelperExtensions.cs. This gives us an absolute URL to static content.
- Used AbsoluteContent in OpenSearchService.cs to link to icons.
- ReadMe.html now has check boxes next to each step which remembers if it was checked or not.
- Added lots of new information into ReadMe.html from http://webdevchecklist.com/.
- Added Atom 1.0 feed.
	- IFeedService.cs added.
	- FeedService.cs added.
	- AtomActionResult.cs added to return Atom feeds.
	- SyndicationFeedExtensions added to add icon element to System.ServiceModel.SyndicationFeed.