@@ -191,6 +191,7 @@
     <Compile Include="Framework\CspViolationException.cs" />
     <Compile Include="Framework\NoTrailingSlashAttribute.cs" />
     <Compile Include="Framework\RedirectToCanonicalUrlAttribute.cs" />
+    <Content Include="Framework\RedirectToHttpsAttribute.cs" />
     <Compile Include="Framework\SitemapFrequency.cs" />
     <Compile Include="Framework\SitemapNode.cs" />
     <Compile Include="Framework\StringWriterWithEncoding.cs" />
@@ -199,7 +200,6 @@
     <Content Include="Error\Forbidden.html" />
     <Content Include="Error\GatewayTimeout.html" />
     <Content Include="Error\ServiceUnavailable.html" />
-    <Content Include="Framework\RedirectToHttpsAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
